--- a/assets/css/touch.css
+++ b/assets/css/touch.css
@@ -12,74 +12,7 @@ input, textarea{
 	outline:none;
 }
 html{-webkit-text-size-adjust:none;overflow:hidden;}
-
-.slide {
-    -webkit-animation-duration: 400ms;
-    -webkit-animation-timing-function: ease;
-    -webkit-transform: translate3d(0,0,0);
-    -webkit-backface-visibility: hidden;
-}
-
-.in.slide {
-    -webkit-animation-name: slideRightIn;
-    z-index: 1
-}
-
-.slide.out {
-    -webkit-animation-name: slideLeftOut;
-    display: block;
-    z-index: 0
-}
-
-.in.slide.reverse {
-    -webkit-animation-name: slideLeftIn
-}
-
-.slide.out.reverse {
-    -webkit-animation-name: slideRightOut;
-    display: block
-}
-
-@-webkit-keyframes slideRightIn {
-    0% {
-        -webkit-transform: translate3d(100%,0,0)
-    }
-
-    100% {
-        -webkit-transform: translate3d(0,0,0)
-    }
-}
-
-@-webkit-keyframes slideRightOut {
-    0% {
-        -webkit-transform: translate3d(0,0,0)
-    }
-
-    100% {
-        -webkit-transform: translate3d(100%,0,0)
-    }
-}
-
-@-webkit-keyframes slideLeftOut {
-    0% {
-        -webkit-transform: translate3d(0,0,0)
-    }
-
-    100% {
-        -webkit-transform: translate3d(-100%,0,0)
-    }
-}
-
-@-webkit-keyframes slideLeftIn {
-    0% {
-        -webkit-transform: translate3d(-100%,0,0)
-    }
-
-    100% {
-        -webkit-transform: translate3d(0,0,0)
-    }
-}
-
+html,body{display: block;height:100%;}
 .ui_app,.ui_app_bd{
 	-webkit-transform: translate3d(0,0,0);
 	-webkit-backface-visibility: hidden;
@@ -98,8 +31,8 @@ html{-webkit-text-size-adjust:none;overflow:hidden;}
 	width:100%;
 	top:0;
 	bottom:0;
+    background-color: #fff;
 	-webkit-backface-visibility:hidden;
-	z-index:999999;
 }
 .ui_mask_bd{
 	position:absolute;
@@ -109,5 +42,24 @@ html{-webkit-text-size-adjust:none;overflow:hidden;}
 	width:100%;
     text-align: center;
 }
-.ui_mask_bd img{vertical-align: middle;display: inline-block;}
+.ui_mask_bd img{position:absolute;top:50%;left:50%;margin-left:-18px;margin-top:-20px;vertical-align: middle;display: inline-block;}
 .ui_mask_bd h3{margin-top:40%;text-align:center;}
+
+.supports3d{-webkit-perspective: 1000;}
+.supports3d .ui_page,.supports3d .ui_section,.supports3d .ui_aside,.supports3d .ui_popup,.supports3d .ui_mask{
+    -webkit-transform: translate3d(0, 0, 0) rotate(0) scale(1);
+}
+
+.ui_page,.ui_section,.ui_aside,.ui_popup,.ui_mask{display: block;}
+
+.current{
+    z-index: 10;
+}
+
+.ui_page:not(.current):not(.inmotion),
+.ui_section:not(.current):not(.inmotion),
+.ui_aside:not(.current):not(.inmotion),
+.ui_popup:not(.current):not(.inmotion),
+.ui_mask:not(.current):not(.inmotion) {
+    display: none!important;
+}
