--- a/src/css/include/xo.animations.css
+++ b/src/css/include/xo.animations.css
@@ -3,7 +3,7 @@
     -webkit-animation-fill-mode: both;
     -webkit-animation-timing-function: ease-in-out;
 }
-.in {
+.in,.back-out {
     z-index: 10;        
 }
 .out {
@@ -399,16 +399,16 @@
 }
 
 
-// Cubes
+/* Cubes */
 /* Cube Left */
 
-// Unfortunately, to acheive a proper cube effect,
+/* Unfortunately, to acheive a proper cube effect,
 // we need the page width. Assuming 320px here.
+*/
 
 .cubeleft, .cuberight {
     &.in, &.out {
         -webkit-animation-duration: .6s;
-        // -webkit-animation-timing-function: linear;
         -webkit-transform: perspective(800);
     }
 }
@@ -483,4 +483,100 @@
         -webkit-transform: rotateY(90deg) translateZ(320px);
         opacity: .5;
     }
+}
+
+
+.xo_ani_slide{-webkit-transform-origin:transform-origin:100% 100%;}
+.xo_ani_slide.in{-webkit-animation-name:phoneSlideIn;animation-name:phoneSlideIn}
+.xo_ani_slide.out{-webkit-animation-name:phoneSlideOut;animation-name:phoneSlideOut}
+.xo_ani_slide.back-in{-webkit-animation-name:phoneSlideBackIn;animation-name:phoneSlideBackIn}
+.xo_ani_slide.back-out{-webkit-animation-name:phoneSlideBackOut;animation-name:phoneSlideBackOut}
+.xo_ani_cover{-webkit-transform-origin:50% 100%;transform-origin:50% 100%;}
+.xo_ani_cover.in{-webkit-animation-name:phoneCoverIn;animation-name:phoneCoverIn}
+.xo_ani_cover.out{-webkit-animation-name:phoneCoverOut;animation-name:phoneCoverOut}
+.xo_ani_cover.back-in{-webkit-animation-name:phoneCoverBackIn;animation-name:phoneCoverBackIn}
+.xo_ani_cover.back-out{-webkit-animation-name:phoneCoverOutBack;animation-name:phoneCoverOutBack}
+.xo_ani_fade.in{-webkit-animation-name:phoneFadeIn;animation-name:phoneFadeIn}
+.xo_ani_fade.out{-webkit-animation-name:phoneFadeOut;animation-name:phoneFadeOut}
+.xo_ani_fade.back-in{-webkit-animation-name:phoneFadeIn;animation-name:phoneFadeIn}
+.xo_ani_fade.back-out{-webkit-animation-name:phoneFadeOut;animation-name:phoneFadeOut}
+@-webkit-keyframes phoneSlideOut{
+    0%{-webkit-transform:translateZ(0);}
+    100%{-webkit-transform:rotateY(-15deg);opacity:.25;}
+}
+@keyframes phoneSlideOut{
+    0%{transform:translateZ(0);}
+    100%{transform:rotateY(-15deg);opacity:.25;}
+}
+@-webkit-keyframes phoneSlideIn{
+    0%{-webkit-transform:translateX(110%);}
+    100%{-webkit-transform:translateX(0);}
+}
+@keyframes phoneSlideIn{
+    0%{transform:translateX(110%);}
+    100%{transform:translateX(0);}
+}
+@-webkit-keyframes phoneSlideBackOut{
+    0%{-webkit-transform:translateX(0);}
+    100%{-webkit-transform:translateX(110%);
+}
+@keyframes phoneSlideBackOut{
+    0%{transform:translateX(0);}
+    100%{transform:translateX(110%);
+}
+@-webkit-keyframes phoneSlideBackIn{
+    0%{-webkit-transform:rotateY(-15deg);opacity:.25;}
+    100%{-webkit-transform:translateZ(0);}
+}
+@keyframes phoneSlideBackIn{
+    0%{transform:rotateY(-15deg);opacity:.25;}
+    100%{transform:translateZ(0);}
+}
+@-webkit-keyframes phoneCoverOut{
+    0%{-webkit-transform:translateZ(0);}
+    100%{-webkit-transform:rotateX(15deg);opacity:.25;}
+}
+@keyframes phoneCoverOut{
+    0%{transform:translateZ(0);}
+    100%{transform:rotateX(15deg);opacity:.25;}
+}
+@-webkit-keyframes phoneCoverIn{
+    0%{-webkit-transform:translateY(110%);}
+    100%{-webkit-transform:translateY(0);}
+}
+@keyframes phoneCoverIn{
+    0%{transform:translateY(110%);}
+    100%{transform:translateY(0);}
+}
+@-webkit-keyframes phoneCoverOutBack{
+    0%{-webkit-transform:translateY(0);}
+    100%{-webkit-transform:translateY(110%);}
+}
+@keyframes phoneCoverOutBack{
+    0%{transform:translateY(0);}
+    100%{transform:translateY(110%);}
+}
+@-webkit-keyframes phoneCoverBackIn{
+    0%{-webkit-transform:rotateX(15deg);opacity:.25;}
+    100%{-webkit-transform:translateZ(0);}
+}
+@keyframes phoneCoverBackIn{
+    0%{transform:rotateX(15deg);opacity:.25;}
+    100%{transform:translateZ(0);}
+}
+@-webkit-keyframes phoneFadeOut{
+    0%{opacity:1}
+    100%{opacity:0}
+}
+@keyframes phoneFadeOut{
+    0%{opacity:1}
+    100%{opacity:0}
+}
+@-webkit-keyframes phoneFadeIn{
+    0%{opacity:0}
+    100%{opacity:1}
+}
+@keyframes phoneFadeIn{
+    0%{opacity:0}
+    100%{opacity:1}
 }
