--- a/src/css/include/xo.loader.css
+++ b/src/css/include/xo.loader.css
@@ -1,4 +1,4 @@
-.ui_loader{
+.xo_loader{
     position:absolute;
     z-index: 12;
     left:0;
@@ -8,28 +8,28 @@
     overflow: hidden;
     -webkit-backface-visibility:hidden;
 }
-.ui_loader_animate {
+.xo_loader_animate {
     position: absolute; 
     left: 50%; 
     top: 50%; 
     margin: -12px 0 0 -65px; 
 }
-.ui_loader_animate span { 
+.xo_loader_animate span { 
     display: inline-block;
     vertical-align: middle;
     width: 10px;
     height: 10px;
     margin: 0 10px;
-    background: black; 
+    background:#1d7ad9; 
     border-radius: 50px; 
     -webkit-animation: loader 0.9s infinite alternate; 
     animation: loader 0.9s infinite alternate; 
 }
-.ui_loader_animate span:nth-of-type(2) { 
+.xo_loader_animate span:nth-of-type(2) { 
     -webkit-animation-delay: 0.3s; 
     animation-delay: 0.3s; 
 }
-.ui_loader_animate span:nth-of-type(3) { 
+.xo_loader_animate span:nth-of-type(3) { 
     -webkit-animation-delay: 0.6s; 
     animation-delay: 0.6s; 
 }
