--- a/src/css/xo.css
+++ b/src/css/xo.css
@@ -1,4 +1,4 @@
-@import url(include/xo.base.css);
+@import url(include/xo.base.css?v=20131209);
 @import url(include/xo.3dspec.css);
 @import url(include/xo.container.css);
 @import url(include/xo.navbar.css);
