--- a/demo/css/swipeview.css
+++ b/demo/css/swipeview.css
@@ -3,3 +3,4 @@
 }
 .card section{width: 100%; height: 100%; position: absolute; top: 0px; overflow: hidden;}
 .xo_section{display: block;}
+.xo_section .pager{'-webkit-backface-visibility': 'hidden','-webkit-transform-style': 'preserve-3d'}
