--- a/demo/css/swipeview.css
+++ b/demo/css/swipeview.css
@@ -1,6 +1,6 @@
 .card{width: 100%; height: 100%; position: absolute; top: 50px;
 	-webkit-transition: 0ms ease-out; transition: 0ms ease-out; 
 }
-.card section{width: 100%; height: 100%; position: absolute; top: 0px; overflow: hidden;}
+.card section{width: 100%; height: 100%; position: absolute; top: 0px;-webkit-overflow-scrolling : touch;}
 .xo_section{display: block;}
-.xo_section .pager{'-webkit-backface-visibility': 'hidden','-webkit-transform-style': 'preserve-3d'}
+.xo_section .pager{'-webkit-backface-visibility': 'hidden','-webkit-transform-style': 'preserve-3d'; }
