--- a/demo/yxmall/css/act_demo.full.css
+++ b/demo/yxmall/css/act_demo.full.css
@@ -26,7 +26,7 @@
 	.alpha-layer{position:fixed;z-index:99;width:100%;height:100%; top:0;left:0;z-index:2; background-color:transparent;background-color:rgba(0, 0, 0, 0.5);filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr="#7f000000", EndColorStr="#7f000000");color:#fff}
 	.alpha-layer:not(s){filter:none;}/* IE9+ filter reset */
 
-.nav_home{right:90px;left:0;width:auto;}
+.nav_home{right:90px;left:0;width:auto;min-width: 72px;}
 
 
 .page_search.current{z-index: 102;}
