--- a/src/css/include/xo.loader.css
+++ b/src/css/include/xo.loader.css
@@ -25,6 +25,10 @@
     -webkit-animation: loader 0.9s infinite alternate; 
     animation: loader 0.9s infinite alternate; 
 }
+.xo_loader.hide .xo_loader_animate span{
+    -webkit-animation: none; 
+    animation: none; 
+}
 .xo_loader_animate span:nth-of-type(2) { 
     -webkit-animation-delay: 0.3s; 
     animation-delay: 0.3s; 
@@ -33,6 +37,7 @@
     -webkit-animation-delay: 0.6s; 
     animation-delay: 0.6s; 
 }
+
 @-webkit-keyframes loader {
     0% { 
         width: 10px; 
