--- a/src/css/include/xo.3dspec.css
+++ b/src/css/include/xo.3dspec.css
@@ -6,5 +6,5 @@
     -ms-backface-visibility: hidden;
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
-    -webkit-transform-style: preserve-3d;
+    /*-webkit-transform-style: preserve-3d;*/
 }
