--- a/src/css/include/xo.3dspec.css
+++ b/src/css/include/xo.3dspec.css
@@ -1,5 +1,5 @@
-.supports3d{-webkit-perspective: 1000;}
 .supports3d .xo_page,.supports3d .xo_section,.supports3d .xo_aside,.supports3d .xo_popup,.supports3d .xo_mask{
+    -webkit-perspective: 1000;
     -webkit-transform: translate3d(0, 0, 0) rotate(0) scale(1);
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
