--- a/src/css/include/xo.animations.css
+++ b/src/css/include/xo.animations.css
@@ -1,6 +1,6 @@
 .in, .out, .inmotion {
     -webkit-animation-duration: 350ms;
-    -webkit-animation-fill-mode: both;
+    -webkit-animation-fill-mode: forwards;
     -webkit-animation-timing-function: ease-in-out;/*cubic-bezier(.645,.045,.355,1);ease-in-out*/;
 }
 .in,.back-out {
@@ -122,19 +122,23 @@
 
 @-webkit-keyframes slideLeftIn {
     0% {
-        -webkit-transform: translateX(90%);
+        -webkit-transform: translate3d(100%,0,0);
+        /*-webkit-transform: translateX(90%);*/
     } 
     100% {
-        -webkit-transform: translateX(0);
+        -webkit-transform: translate3d(0,0,0);
+        /*-webkit-transform: translateX(0);*/
     }
 }
 
 @-webkit-keyframes slideLeftOut {
     0% {
-        -webkit-transform: translateX(-10%);
+        -webkit-transform: translate3d(0,0,0);
+        /*-webkit-transform: translateX(-10%);*/
     } 
     100% {
-        -webkit-transform: translateX(-100%);
+        -webkit-transform: translate3d(-100%,0,0);
+        /*-webkit-transform: translateX(-100%);*/
     }
 }
 
@@ -152,19 +156,23 @@
 
 @-webkit-keyframes slideRightIn {
     0% {
-        -webkit-transform: translateX(-90%);
+        -webkit-transform: translate3d(-100%,0,0);
+        /*-webkit-transform: translateX(-90%);*/
     } 
     100% {
-        -webkit-transform: translateX(0);
+        -webkit-transform: translate3d(0,0,0);
+        /*-webkit-transform: translateX(0);*/
     }
 }
 
 @-webkit-keyframes slideRightOut {
     0% {
-        -webkit-transform: translateX(10%);
+        -webkit-transform: translate3d(0,0,0);
+        /*-webkit-transform: translateX(0);*/
     } 
     100% {
-        -webkit-transform: translateX(100%);
+        -webkit-transform: translate3d(100%,0,0);
+        /*-webkit-transform: translateX(100%);*/
     }
 }
 
