--- a/src/css/include/xo.base.css
+++ b/src/css/include/xo.base.css
@@ -6,12 +6,11 @@
     background:transparent;
     vertical-align:baseline;
 }
-html{-webkit-text-size-adjust:none;overflow:hidden;}
 html,body{display: block;height:100%;}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}
 
 body{
-    -webkit-text-size-adjust:none;
+    -webkit-text-size-adjust:100%;
     -webkit-user-select:none;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
     -webkit-touch-callout:none;
@@ -19,7 +18,7 @@ body{
     color:#666;
     min-width: 320px;
     margin:0 auto;
-    position: relative;
+    /*position: relative;*/
 }
 
 body,input,button,select,textarea,table{
@@ -61,8 +60,8 @@ input, textarea{
     position:absolute;
     left:0;
     top:0;
-    bottom: 0;
-    right:0;
+    width: 100%;
+    height:100%;
     overflow: hidden;
     z-index: 10;
     /*
@@ -139,7 +138,3 @@ input, textarea{
 .hide{
     display: none!important;
 }
-
-/* animating style 动画进行中的样式处理 
-===========================================*/
-.animating .xo_scroll{overflow: hidden;}
