--- a/src/css/include/xo.3dspec.css
+++ b/src/css/include/xo.3dspec.css
@@ -1,4 +1,3 @@
-.supports3d{-webkit-perspective: 800px;}
 .supports3d .xo_page,.supports3d .xo_aside,.supports3d .xo_popup,.supports3d .xo_mask{
     -webkit-transform: translate3d(0, 0, 0) rotate(0) scale(1);
     -webkit-backface-visibility: hidden;
@@ -6,5 +5,6 @@
     -ms-backface-visibility: hidden;
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
+    -webkit-perspective: 900;
     -webkit-transform-style: preserve-3d;
 }
