--- a/src/css/include/xo.animations.css
+++ b/src/css/include/xo.animations.css
@@ -1,6 +1,6 @@
 .in, .out, .inmotion {
     -webkit-animation-duration: 350ms;
-    -webkit-animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: both;
     -webkit-animation-timing-function: ease-in-out;/*cubic-bezier(.645,.045,.355,1);ease-in-out*/;
 }
 .in,.back-out {
@@ -485,24 +485,23 @@
     }
 }
 
-
-.xo_ani_slideleft,.xo_ani_slideright{-webkit-transform-origin:transform-origin:100% 100%;}
-.xo_ani_slideleft.in{-webkit-animation-name:phoneSlideIn;animation-name:phoneSlideIn}
-.xo_ani_slideleft.out{-webkit-animation-name:phoneSlideOut;animation-name:phoneSlideOut}
-.xo_ani_slideright.in{-webkit-animation-name:phoneSlideBackIn;animation-name:phoneSlideBackIn}
-.xo_ani_slideright.out{-webkit-animation-name:phoneSlideBackOut;animation-name:phoneSlideBackOut}
-.xo_ani_coverup,.xo_ani_coverdown{-webkit-transform-origin:50% 100%;transform-origin:50% 100%;}
-.xo_ani_coverdown.in{-webkit-animation-name:phoneCoverIn;animation-name:phoneCoverIn}
-.xo_ani_coverdown.out{-webkit-animation-name:phoneCoverOut;animation-name:phoneCoverOut}
-.xo_ani_coverup.in{-webkit-animation-name:phoneCoverBackIn;animation-name:phoneCoverBackIn}
-.xo_ani_coverup.out{-webkit-animation-name:phoneCoverOutBack;animation-name:phoneCoverOutBack}
+.pokerleft,.pokerright{-webkit-animation-duration: .6s;-webkit-transform-origin:100% 100%;transform-origin:100% 100%;}
+.pokerleft.in{-webkit-animation-name:phoneSlideIn;animation-name:phoneSlideIn}
+.pokerleft.out{-webkit-animation-name:phoneSlideOut;animation-name:phoneSlideOut}
+.pokerright.in{-webkit-animation-name:phoneSlideBackIn;animation-name:phoneSlideBackIn}
+.pokerright.out{-webkit-animation-name:phoneSlideBackOut;animation-name:phoneSlideBackOut}
+.pokercoverup,.pokercoverdown{-webkit-transform-origin:50% 100%;transform-origin:50% 100%;}
+.pokercoverdown.in{-webkit-animation-name:phoneCoverIn;animation-name:phoneCoverIn}
+.pokercoverdown.out{-webkit-animation-name:phoneCoverOut;animation-name:phoneCoverOut}
+.pokercoverup.in{-webkit-animation-name:phoneCoverBackIn;animation-name:phoneCoverBackIn}
+.pokercoverup.out{-webkit-animation-name:phoneCoverOutBack;animation-name:phoneCoverOutBack}
 @-webkit-keyframes phoneSlideOut{
     0%{-webkit-transform:translateZ(0);}
-    100%{-webkit-transform:rotateY(-15deg);opacity:.25;}
+    100%{-webkit-transform:rotateY(-20deg);opacity:.25;}
 }
 @keyframes phoneSlideOut{
     0%{transform:translateZ(0);}
-    100%{transform:rotateY(-15deg);opacity:.25;}
+    100%{transform:rotateY(-20deg);opacity:.25;}
 }
 @-webkit-keyframes phoneSlideIn{
     0%{-webkit-transform:translateX(110%);}
@@ -513,20 +512,20 @@
     100%{transform:translateX(0);}
 }
 @-webkit-keyframes phoneSlideBackOut{
-    0%{-webkit-transform:translateX(0);}
-    100%{-webkit-transform:translateX(110%);
-}
-@keyframes phoneSlideBackOut{
-    0%{transform:translateX(0);}
-    100%{transform:translateX(110%);
-}
-@-webkit-keyframes phoneSlideBackIn{
-    0%{-webkit-transform:rotateY(-15deg);opacity:.25;}
+    0%{-webkit-transform:rotateY(-20deg);opacity:.25;}
     100%{-webkit-transform:translateZ(0);}
 }
-@keyframes phoneSlideBackIn{
-    0%{transform:rotateY(-15deg);opacity:.25;}
+@keyframes phoneSlideBackOut{
+    0%{transform:rotateY(-20deg);opacity:.25;}
     100%{transform:translateZ(0);}
+}
+@-webkit-keyframes phoneSlideBackIn{
+    0%{-webkit-transform:translateX(-110%);}
+    100%{-webkit-transform:translateX(0);
+}
+@keyframes phoneSlideBackIn{
+    0%{transform:translateX(-110%);}
+    100%{transform:translateX(0);
 }
 @-webkit-keyframes phoneCoverOut{
     0%{-webkit-transform:translateZ(0);}
