--- a/src/css/xo.css
+++ b/src/css/xo.css
@@ -2,3 +2,5 @@
 @import url(include/xo.3dspec.css);
 @import url(include/xo.loader.css);
 @import url(include/xo.animations.css);
+@import url(include/xo.tablist.css);
+@import url(include/xo.ratchet.css);
