add yue.css as part of xo.css

--- a/src/css/include/xo.base.css
+++ b/src/css/include/xo.base.css
@@ -19,7 +19,9 @@ input, textarea{
     -webkit-user-select: text;
     outline:none;
 }
-
+.content-pullin{
+    padding:10px;
+}
 /*===== S 页面框架 =====*/
 .xpage,.xpage_inner{
     position:absolute;
