--- a/src/css/include/xo.ratchet.css
+++ b/src/css/include/xo.ratchet.css
@@ -1,3 +1,28 @@
+.card{
+    box-shadow: 0 2px 5px rgba(0,0,0,.16),0 2px 5px rgba(0,0,0,.23);
+    -webkit-box-shadow:0 2px 5px rgba(0,0,0,.16),0 2px 5px rgba(0,0,0,.23);
+    border-radius: 1px;
+    border: 0;
+}
+.bar{
+    border-bottom:0;
+    box-shadow:0 1px 4px rgba(0,0,0,.23);
+    -webkit-box-shadow:0 1px 4px rgba(0,0,0,.23);
+}
+.segmented-control{
+    border-radius:0px;
+}
+.segmented-control .control-item{
+    padding-top:9px;
+    padding-bottom:10px;
+}
+.segmented-control .control-item.active{
+    background-color:#333;
+    color:#fff;
+}
+.bar .segmented-control{
+    top:5px;
+}
 .bar .icon{
     padding:5px;
     margin-top:5px;
