--- a/src/css/include/xo.base.css
+++ b/src/css/include/xo.base.css
@@ -22,6 +22,15 @@ input, textarea{
 .content-pullin{
     padding:10px;
 }
+.v-center{
+    position:relative;
+    top:50%;
+    transform:translateY(-50%);
+    -webkit-transform:translateY(-50%);
+    -ms-transform:translateY(-50%);
+    -moz-transform:translateY(-50%);
+    -o-transform:translateY(-50%);
+}
 /*===== S 页面框架 =====*/
 .xpage,.xpage_inner{
     position:absolute;
