--- a/src/css/include/xo.hint.css
+++ b/src/css/include/xo.hint.css
@@ -1,9 +1,10 @@
 .hint{
-    background: #1f8dd6;
+    background: #03a9f4;
     padding: 0.3em 1em;
-    border-radius: 2px;
     color: #eee;
-    margin:10px;
+    margin:15px 10px;
+    box-shadow:0 2px 5px rgba(0,0,0,.2);
+    -webkit-box-shadow:0 2px 5px rgba(0,0,0,.2);
 }
 .hint p{
     margin-bottom:1px;
