--- a/src/css/include/xo.ratchet.css
+++ b/src/css/include/xo.ratchet.css
@@ -1,7 +1,7 @@
 .card{
     box-shadow: 0 2px 5px rgba(0,0,0,.16),0 2px 5px rgba(0,0,0,.23);
     -webkit-box-shadow:0 2px 5px rgba(0,0,0,.16),0 2px 5px rgba(0,0,0,.23);
-    border-radius: 1px;
+    border-radius: 0;
     border: 0;
 }
 .bar{
@@ -9,6 +9,10 @@
     box-shadow:0 1px 4px rgba(0,0,0,.23);
     -webkit-box-shadow:0 1px 4px rgba(0,0,0,.23);
 }
+.bar-nav{
+    background-color:#23232e;
+}
+.bar-nav .title{color:#fff;}
 .segmented-control{
     border-radius:0px;
 }
@@ -38,4 +42,17 @@
 }
 h1 .icon,h2 .icon,h3 .icon,h4 .icon{
     color:#777;
+}
+img{max-width:100%;}
+/*
+ * btn
+ * ****************/
+.btn-block{
+    border-radius:2px;
+    box-shadow:0 2px 5px rgba(0,0,0,.2);
+    -webkit-box-shadow:0 2px 5px rgba(0,0,0,.2);
+}
+.btn-primary{
+    background-color:#1f8dd6;
+    border-color:#1f8dd6;
 }
